gen/presentable_policyParser.js
// Generated from presentable_policy.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var presentable_policyListener = require('./presentable_policyListener').presentable_policyListener;
var grammarFileName = "presentable_policy.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "','", "'in'", "'proceed to'", "'on'", 
                     "'accepting'", "'and on'", "'the end of'", "'date'", 
                     "'after contract creation'", "'price priceExpression'", 
                     "'transaction of'", "'to'", "'contract_guaranty of'", 
                     "'refund after'", "'day'", "'platform_guaranty of'", 
                     "'license'", "'visit_increment of'", "'visit of'", 
                     "'account_balance greater than'", "'account_balance smaller than'", 
                     "'account_settled'", "'year'", "'week'", "'cycle'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      "GROUPUSER", "FOR", "REGISTERED_USERS", "PUBLIC", 
                      "NODES", "TERMINATE", "ID", "INTEGER_NUMBER", "USERACCOUNT", 
                      "FEATHERACCOUNT", "WS", "DATE" ];

var ruleNames =  [ "p", "segment", "audience_clause", "state_clause", "current_state_clause", 
                   "target_clause", "event", "and_event", "period_event", 
                   "specific_date_event", "relative_date_event", "pricing_agreement_event", 
                   "transaction_event", "guaranty_event", "contract_guaranty", 
                   "platform_guaranty", "signing_event", "access_count_event", 
                   "visit_increment_event", "visit_event", "balance_event", 
                   "balance_greater", "balance_smaller", "settlement_event", 
                   "license_resource_id", "users", "time_unit", "start_hour", 
                   "end_hour" ];

function presentable_policyParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

presentable_policyParser.prototype = Object.create(antlr4.Parser.prototype);
presentable_policyParser.prototype.constructor = presentable_policyParser;

Object.defineProperty(presentable_policyParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

presentable_policyParser.EOF = antlr4.Token.EOF;
presentable_policyParser.T__0 = 1;
presentable_policyParser.T__1 = 2;
presentable_policyParser.T__2 = 3;
presentable_policyParser.T__3 = 4;
presentable_policyParser.T__4 = 5;
presentable_policyParser.T__5 = 6;
presentable_policyParser.T__6 = 7;
presentable_policyParser.T__7 = 8;
presentable_policyParser.T__8 = 9;
presentable_policyParser.T__9 = 10;
presentable_policyParser.T__10 = 11;
presentable_policyParser.T__11 = 12;
presentable_policyParser.T__12 = 13;
presentable_policyParser.T__13 = 14;
presentable_policyParser.T__14 = 15;
presentable_policyParser.T__15 = 16;
presentable_policyParser.T__16 = 17;
presentable_policyParser.T__17 = 18;
presentable_policyParser.T__18 = 19;
presentable_policyParser.T__19 = 20;
presentable_policyParser.T__20 = 21;
presentable_policyParser.T__21 = 22;
presentable_policyParser.T__22 = 23;
presentable_policyParser.T__23 = 24;
presentable_policyParser.T__24 = 25;
presentable_policyParser.T__25 = 26;
presentable_policyParser.GROUPUSER = 27;
presentable_policyParser.FOR = 28;
presentable_policyParser.REGISTERED_USERS = 29;
presentable_policyParser.PUBLIC = 30;
presentable_policyParser.NODES = 31;
presentable_policyParser.TERMINATE = 32;
presentable_policyParser.ID = 33;
presentable_policyParser.INTEGER_NUMBER = 34;
presentable_policyParser.USERACCOUNT = 35;
presentable_policyParser.FEATHERACCOUNT = 36;
presentable_policyParser.WS = 37;
presentable_policyParser.DATE = 38;

presentable_policyParser.RULE_p = 0;
presentable_policyParser.RULE_segment = 1;
presentable_policyParser.RULE_audience_clause = 2;
presentable_policyParser.RULE_state_clause = 3;
presentable_policyParser.RULE_current_state_clause = 4;
presentable_policyParser.RULE_target_clause = 5;
presentable_policyParser.RULE_event = 6;
presentable_policyParser.RULE_and_event = 7;
presentable_policyParser.RULE_period_event = 8;
presentable_policyParser.RULE_specific_date_event = 9;
presentable_policyParser.RULE_relative_date_event = 10;
presentable_policyParser.RULE_pricing_agreement_event = 11;
presentable_policyParser.RULE_transaction_event = 12;
presentable_policyParser.RULE_guaranty_event = 13;
presentable_policyParser.RULE_contract_guaranty = 14;
presentable_policyParser.RULE_platform_guaranty = 15;
presentable_policyParser.RULE_signing_event = 16;
presentable_policyParser.RULE_access_count_event = 17;
presentable_policyParser.RULE_visit_increment_event = 18;
presentable_policyParser.RULE_visit_event = 19;
presentable_policyParser.RULE_balance_event = 20;
presentable_policyParser.RULE_balance_greater = 21;
presentable_policyParser.RULE_balance_smaller = 22;
presentable_policyParser.RULE_settlement_event = 23;
presentable_policyParser.RULE_license_resource_id = 24;
presentable_policyParser.RULE_users = 25;
presentable_policyParser.RULE_time_unit = 26;
presentable_policyParser.RULE_start_hour = 27;
presentable_policyParser.RULE_end_hour = 28;

function PContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_p;
    return this;
}

PContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PContext.prototype.constructor = PContext;

PContext.prototype.EOF = function() {
    return this.getToken(presentable_policyParser.EOF, 0);
};

PContext.prototype.segment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SegmentContext);
    } else {
        return this.getTypedRuleContext(SegmentContext,i);
    }
};

PContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterP(this);
	}
};

PContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitP(this);
	}
};




presentable_policyParser.PContext = PContext;

presentable_policyParser.prototype.p = function() {

    var localctx = new PContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, presentable_policyParser.RULE_p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===presentable_policyParser.FOR) {
            this.state = 58;
            this.segment();
            this.state = 63;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 64;
        this.match(presentable_policyParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SegmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_segment;
    return this;
}

SegmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SegmentContext.prototype.constructor = SegmentContext;

SegmentContext.prototype.FOR = function() {
    return this.getToken(presentable_policyParser.FOR, 0);
};

SegmentContext.prototype.audience_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Audience_clauseContext);
    } else {
        return this.getTypedRuleContext(Audience_clauseContext,i);
    }
};

SegmentContext.prototype.state_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(State_clauseContext);
    } else {
        return this.getTypedRuleContext(State_clauseContext,i);
    }
};

SegmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterSegment(this);
	}
};

SegmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitSegment(this);
	}
};




presentable_policyParser.SegmentContext = SegmentContext;

presentable_policyParser.prototype.segment = function() {

    var localctx = new SegmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, presentable_policyParser.RULE_segment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 66;
        this.match(presentable_policyParser.FOR);
        this.state = 68; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 67;
            this.audience_clause(0);
            this.state = 70; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 27)) & ~0x1f) == 0 && ((1 << (_la - 27)) & ((1 << (presentable_policyParser.GROUPUSER - 27)) | (1 << (presentable_policyParser.REGISTERED_USERS - 27)) | (1 << (presentable_policyParser.PUBLIC - 27)) | (1 << (presentable_policyParser.NODES - 27)) | (1 << (presentable_policyParser.INTEGER_NUMBER - 27)) | (1 << (presentable_policyParser.USERACCOUNT - 27)))) !== 0));
        this.state = 72;
        this.match(presentable_policyParser.T__0);
        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===presentable_policyParser.T__2 || _la===presentable_policyParser.TERMINATE) {
            this.state = 73;
            this.state_clause();
            this.state = 78;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Audience_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_audience_clause;
    return this;
}

Audience_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Audience_clauseContext.prototype.constructor = Audience_clauseContext;

Audience_clauseContext.prototype.users = function() {
    return this.getTypedRuleContext(UsersContext,0);
};

Audience_clauseContext.prototype.audience_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Audience_clauseContext);
    } else {
        return this.getTypedRuleContext(Audience_clauseContext,i);
    }
};

Audience_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterAudience_clause(this);
	}
};

Audience_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitAudience_clause(this);
	}
};



presentable_policyParser.prototype.audience_clause = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new Audience_clauseContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, presentable_policyParser.RULE_audience_clause, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 80;
        this.users();
        this._ctx.stop = this._input.LT(-1);
        this.state = 87;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                localctx = new Audience_clauseContext(this, _parentctx, _parentState);
                this.pushNewRecursionContext(localctx, _startState, presentable_policyParser.RULE_audience_clause);
                this.state = 82;
                if (!( this.precpred(this._ctx, 1))) {
                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                }
                this.state = 83;
                this.match(presentable_policyParser.T__1);
                this.state = 84;
                this.audience_clause(2); 
            }
            this.state = 89;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function State_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_state_clause;
    return this;
}

State_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
State_clauseContext.prototype.constructor = State_clauseContext;

State_clauseContext.prototype.TERMINATE = function() {
    return this.getToken(presentable_policyParser.TERMINATE, 0);
};

State_clauseContext.prototype.current_state_clause = function() {
    return this.getTypedRuleContext(Current_state_clauseContext,0);
};

State_clauseContext.prototype.target_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Target_clauseContext);
    } else {
        return this.getTypedRuleContext(Target_clauseContext,i);
    }
};

State_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterState_clause(this);
	}
};

State_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitState_clause(this);
	}
};




presentable_policyParser.State_clauseContext = State_clauseContext;

presentable_policyParser.prototype.state_clause = function() {

    var localctx = new State_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, presentable_policyParser.RULE_state_clause);
    try {
        this.state = 97;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case presentable_policyParser.TERMINATE:
            this.enterOuterAlt(localctx, 1);
            this.state = 90;
            this.match(presentable_policyParser.TERMINATE);
            break;
        case presentable_policyParser.T__2:
            this.enterOuterAlt(localctx, 2);
            this.state = 91;
            this.current_state_clause();
            this.state = 93; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 92;
            		this.target_clause();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 95; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,4, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Current_state_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_current_state_clause;
    return this;
}

Current_state_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Current_state_clauseContext.prototype.constructor = Current_state_clauseContext;

Current_state_clauseContext.prototype.ID = function() {
    return this.getToken(presentable_policyParser.ID, 0);
};

Current_state_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterCurrent_state_clause(this);
	}
};

Current_state_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitCurrent_state_clause(this);
	}
};




presentable_policyParser.Current_state_clauseContext = Current_state_clauseContext;

presentable_policyParser.prototype.current_state_clause = function() {

    var localctx = new Current_state_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, presentable_policyParser.RULE_current_state_clause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 99;
        this.match(presentable_policyParser.T__2);
        this.state = 100;
        this.match(presentable_policyParser.ID);
        this.state = 101;
        this.match(presentable_policyParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Target_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_target_clause;
    return this;
}

Target_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Target_clauseContext.prototype.constructor = Target_clauseContext;

Target_clauseContext.prototype.ID = function() {
    return this.getToken(presentable_policyParser.ID, 0);
};

Target_clauseContext.prototype.event = function() {
    return this.getTypedRuleContext(EventContext,0);
};

Target_clauseContext.prototype.and_event = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(And_eventContext);
    } else {
        return this.getTypedRuleContext(And_eventContext,i);
    }
};

Target_clauseContext.prototype.TERMINATE = function() {
    return this.getToken(presentable_policyParser.TERMINATE, 0);
};

Target_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterTarget_clause(this);
	}
};

Target_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitTarget_clause(this);
	}
};




presentable_policyParser.Target_clauseContext = Target_clauseContext;

presentable_policyParser.prototype.target_clause = function() {

    var localctx = new Target_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, presentable_policyParser.RULE_target_clause);
    var _la = 0; // Token type
    try {
        this.state = 120;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case presentable_policyParser.T__3:
            this.enterOuterAlt(localctx, 1);
            this.state = 103;
            this.match(presentable_policyParser.T__3);
            this.state = 104;
            this.match(presentable_policyParser.ID);
            this.state = 105;
            this.match(presentable_policyParser.T__4);
            this.state = 109;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===presentable_policyParser.T__5) {
                this.state = 106;
                this.match(presentable_policyParser.T__5);
                this.state = 111;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 112;
            this.event();
            this.state = 116;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===presentable_policyParser.T__6) {
                this.state = 113;
                this.and_event();
                this.state = 118;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;
        case presentable_policyParser.TERMINATE:
            this.enterOuterAlt(localctx, 2);
            this.state = 119;
            this.match(presentable_policyParser.TERMINATE);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_event;
    return this;
}

EventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EventContext.prototype.constructor = EventContext;

EventContext.prototype.period_event = function() {
    return this.getTypedRuleContext(Period_eventContext,0);
};

EventContext.prototype.specific_date_event = function() {
    return this.getTypedRuleContext(Specific_date_eventContext,0);
};

EventContext.prototype.relative_date_event = function() {
    return this.getTypedRuleContext(Relative_date_eventContext,0);
};

EventContext.prototype.pricing_agreement_event = function() {
    return this.getTypedRuleContext(Pricing_agreement_eventContext,0);
};

EventContext.prototype.transaction_event = function() {
    return this.getTypedRuleContext(Transaction_eventContext,0);
};

EventContext.prototype.guaranty_event = function() {
    return this.getTypedRuleContext(Guaranty_eventContext,0);
};

EventContext.prototype.signing_event = function() {
    return this.getTypedRuleContext(Signing_eventContext,0);
};

EventContext.prototype.access_count_event = function() {
    return this.getTypedRuleContext(Access_count_eventContext,0);
};

EventContext.prototype.balance_event = function() {
    return this.getTypedRuleContext(Balance_eventContext,0);
};

EventContext.prototype.settlement_event = function() {
    return this.getTypedRuleContext(Settlement_eventContext,0);
};

EventContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterEvent(this);
	}
};

EventContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitEvent(this);
	}
};




presentable_policyParser.EventContext = EventContext;

presentable_policyParser.prototype.event = function() {

    var localctx = new EventContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, presentable_policyParser.RULE_event);
    try {
        this.state = 132;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case presentable_policyParser.T__7:
            this.enterOuterAlt(localctx, 1);
            this.state = 122;
            this.period_event();
            break;
        case presentable_policyParser.T__8:
            this.enterOuterAlt(localctx, 2);
            this.state = 123;
            this.specific_date_event();
            break;
        case presentable_policyParser.INTEGER_NUMBER:
            this.enterOuterAlt(localctx, 3);
            this.state = 124;
            this.relative_date_event();
            break;
        case presentable_policyParser.T__10:
            this.enterOuterAlt(localctx, 4);
            this.state = 125;
            this.pricing_agreement_event();
            break;
        case presentable_policyParser.T__11:
            this.enterOuterAlt(localctx, 5);
            this.state = 126;
            this.transaction_event();
            break;
        case presentable_policyParser.T__13:
        case presentable_policyParser.T__16:
            this.enterOuterAlt(localctx, 6);
            this.state = 127;
            this.guaranty_event();
            break;
        case presentable_policyParser.T__17:
            this.enterOuterAlt(localctx, 7);
            this.state = 128;
            this.signing_event();
            break;
        case presentable_policyParser.T__18:
        case presentable_policyParser.T__19:
            this.enterOuterAlt(localctx, 8);
            this.state = 129;
            this.access_count_event();
            break;
        case presentable_policyParser.T__20:
        case presentable_policyParser.T__21:
            this.enterOuterAlt(localctx, 9);
            this.state = 130;
            this.balance_event();
            break;
        case presentable_policyParser.T__22:
            this.enterOuterAlt(localctx, 10);
            this.state = 131;
            this.settlement_event();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function And_eventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_and_event;
    return this;
}

And_eventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
And_eventContext.prototype.constructor = And_eventContext;

And_eventContext.prototype.event = function() {
    return this.getTypedRuleContext(EventContext,0);
};

And_eventContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterAnd_event(this);
	}
};

And_eventContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitAnd_event(this);
	}
};




presentable_policyParser.And_eventContext = And_eventContext;

presentable_policyParser.prototype.and_event = function() {

    var localctx = new And_eventContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, presentable_policyParser.RULE_and_event);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 134;
        this.match(presentable_policyParser.T__6);
        this.state = 135;
        this.event();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Period_eventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_period_event;
    return this;
}

Period_eventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Period_eventContext.prototype.constructor = Period_eventContext;

Period_eventContext.prototype.time_unit = function() {
    return this.getTypedRuleContext(Time_unitContext,0);
};

Period_eventContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterPeriod_event(this);
	}
};

Period_eventContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitPeriod_event(this);
	}
};




presentable_policyParser.Period_eventContext = Period_eventContext;

presentable_policyParser.prototype.period_event = function() {

    var localctx = new Period_eventContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, presentable_policyParser.RULE_period_event);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 137;
        this.match(presentable_policyParser.T__7);
        this.state = 138;
        this.time_unit();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Specific_date_eventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = presentable_policyParser.RULE_specific_date_event;
    return this;
}

Specific_date_eventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Specific_date_eventContext.prototype.constructor = Specific_date_eventContext;

Specific_date_eventContext.prototype.DATE = function() {
    return this.getToken(presentable_policyParser.DATE, 0);
};

Specific_date_eventContext.prototype.enterRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.enterSpecific_date_event(this);
	}
};

Specific_date_eventContext.prototype.exitRule = function(listener) {
    if(listener instanceof presentable_policyListener ) {
        listener.exitSpecific_date_event(this);
	}
};



